# obolc

./: .gitignore  .ignore  CMakeLists.txt  Makefile  README.md  dev.sh  flake.nix  style.scss  tailwind.scss
.github/workflows/: ci.yml
assets/: style.css
include/: colors.hpp  media_window.hpp  mpris.hpp  panel.hpp  system_info.hpp  tray.hpp  utils.hpp
src/: main.cpp  media_window.cpp  mpris.cpp  panel.cpp  system_info.cpp  tray.cpp  utils.cpp
